syntax = "proto3";

package userpb;
option go_package = "./;pb";

//  protoc -I pb --go_out=./ --go-grpc_out=./ .\pb\user.proto

enum Operation {
  CREATE = 0;
  UPDATE = 1;
}

message GetUserDetailsRequest{
  uint64 id = 1;
}

message GetUserDetailsResponse{
  string email = 1;
  string username = 2;
  string password = 3;
}

message CreateUpdateUserRequest{
  Operation operation = 1;
  string email = 2;
  string username = 3;
  string password = 4;
  uint64 id = 5;
}

message CreateUpdateUserResponse{
  uint64 id = 1;
}

message GetUsersRequest{}

message GetUserResponse{
  uint64 id = 1;
  string email = 2;
  string username = 3;
  string password = 4;
}
message GetUsersResponse{ // users not user
  repeated GetUserResponse users = 1;
}

service UserService{
  rpc GetUserDetails(GetUserDetailsRequest) returns (GetUserDetailsResponse) {};
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {};
  rpc CreateUpdateUser(CreateUpdateUserRequest) returns (CreateUpdateUserResponse) {};
}